--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "react-scripts test --collectCoverage --watchAll=false",
+    "open:coverage": "open-cli ./coverage/lcov-report/index.html",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
